# VeridianOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SESSION_STATE.md  plan.md  remediation_backlog.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ACADEMIC_REFERENCES.md  ARCHITECTURE.md  AUDIT_REPORT.md  DESIGN.md  FUTURE_COMPUTING_TRENDS.md  INDEX.md  ONBOARDING.md  PHASES.md  PHASE_01_DESIGN.md  PHASE_02_DESIGN.md  PHASE_03_DESIGN.md  PHASE_04_DESIGN.md  PHASE_05_DESIGN.md  PHASE_06_DESIGN.md  PHASE_07_DESIGN.md  PHASE_08_DESIGN.md  PHASE_09_DESIGN.md  PHASE_10_DESIGN.md  PHASE_11_DESIGN.md  PHASE_12_DESIGN.md  RESEARCH_NOTES.md  SEMANTIC_GRAPH_DESIGN.md  version_control.md
docs/research/: FUTURE_COMPUTING_TRENDS.md  RESEARCH_NOTES.md
kernel/: Cargo.toml  build.rs
kernel/src/: lib.rs  main.rs  panic.rs  sbi.rs  trap.rs  uart.rs
kernel/src/agent/: mod.rs
kernel/src/arch/riscv64/: boot.S  linker.ld  trap.S
kernel/src/capability/: channel.rs  mod.rs  rights.rs
kernel/src/enclave/: mod.rs
kernel/src/fs/: mod.rs  ramfs.rs
kernel/src/memory/: mod.rs  page_alloc.rs  page_table.rs
kernel/src/nes/: graph.rs  mod.rs  queue.rs  simulator.rs  syscalls.rs  types.rs  validator.rs
kernel/src/process/: elf.rs  mod.rs  thread.rs
kernel/src/semantic_graph/: mod.rs  store.rs  syscalls.rs  types.rs
kernel/src/syscall/: mod.rs  numbers.rs
kernel/src/virtio/: blk.rs  mod.rs  net.rs
monitor/: Cargo.toml  build.rs
monitor/src/: attest.rs  enclave.rs  linker.ld  main.rs  pmp.rs  sbi_handler.rs
user_program/: Cargo.toml  build.rs
user_program/.cargo/: config.toml
user_program/src/: linker.ld  main.rs
user_programs/agent_test/: Cargo.toml
user_programs/agent_test/.cargo/: config.toml
user_programs/agent_test/src/: linker.ld  main.rs
user_programs/enclave_test/: Cargo.toml
user_programs/enclave_test/src/: main.rs
user_programs/hello/: Cargo.toml  build.rs
user_programs/hello/src/: linker.ld  main.rs
user_programs/neural_test/: Cargo.toml  build.rs
user_programs/neural_test/src/: linker.ld  main.rs
user_programs/policy_test/: Cargo.toml
user_programs/policy_test/src/: main.rs
user_programs/rights_test/: Cargo.toml
user_programs/rights_test/src/: main.rs
user_programs/semantic_test/: Cargo.toml  build.rs
user_programs/semantic_test/src/: linker.ld  main.rs
user_programs/smp_test/: Cargo.toml  build.rs
user_programs/smp_test/src/: linker.ld  main.rs
user_programs/syscall_robustness_test/: Cargo.toml
user_programs/syscall_robustness_test/src/: main.rs
