[package]
name = "veridian-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The VeridianOS microkernel — AI-native, capability-based, written in Rust"

[dependencies]
spin = "0.9"
bitflags = "2"
linked_list_allocator = "0.10.6"
